searchresult displays users w matching first or lastname

--- a/user-info-app/package.json
+++ b/user-info-app/package.json
@@ -9,6 +9,7 @@
   "author": "Manon",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2"
+    "body-parser": "^1.15.2",
+    "express-form": "^0.12.6"
   }
 }
