installed and saved pug, added jquery to search.pug

--- a/assignments/user-information-app/package.json
+++ b/assignments/user-information-app/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express-form": "^0.12.6"
+    "express-form": "^0.12.6",
+    "pug": "^2.0.0-beta6"
   }
 }
