--- a/assignments/financial-planning-app/package.json
+++ b/assignments/financial-planning-app/package.json
@@ -9,6 +9,7 @@
   "author": "Manon",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "materialize-css": "^0.97.7",
     "pug": "^2.0.0-beta6"
